Wed Oct  5 14:32:32 UTC 2011  William R. Otte  <wotte@dre.vanderbit.edu>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:

          Fuzz.

Tue Oct  4 19:42:56 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.h:
        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Task.h:
        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * dance/LocalityManager/Scheduler/Plugin_Manager.h:
        * dance/LocalityManager/Scheduler/Plugin_Manager.cpp:

          Resolved some memory leaks in the pugin subsystem.

Tue Oct  4 14:44:28 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:

          Reduce log priority of certain error messages.

Tue Aug 23 18:17:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

Tue Aug 23 19:01:44 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.0.4 released.

Fri Jul 29 14:18:54 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * dance/LocalityManager/Configuration/CPU_Affinity.cpp:

          unfuzz.

Wed Jul 27 08:45:22 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Configuration/CPU_Affinity.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

        Fixes to address crashing issues on some platforms.

Sun Jul 10 16:21:29 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Error_Documentation/index.html:

          Fuzz.

Thu Jul  7 20:38:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Configuration/Process_Name.cpp:

          Updated to address a glibc error in some Linux distributions.
